# CIS194

./: README.md  cis194.cabal
src/: HW01.hs  HW02.hs  HW03.hs  HW04.hs  HW05.hs  HW06.hs  HW07.hs
src/HW03/: Fun.hs
src/HW05/: Parser.hs
src/HW07/: Cards.hs
test/: HW01Tests.hs  HW02Tests.hs  HW03Tests.hs  Spec.hs  Testing.hs
