name:                cis194
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/thomwright/cis194
license:             BSD3
license-file:        LICENSE
author:              Thom Wright
maintainer:          thom@thomwright.com
copyright:           2016 Thom Wright
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HW01
                     , HW02
                     , HW03
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite cis194-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cis194
  other-modules:       HW01Tests
                     , HW02Tests
                     , HW03Tests
                     , Testing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thomwright/cis194
